attempt to fix scrolling issue on mobile

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -8511,7 +8511,7 @@ h1, h2, h3, h4, h5,
                 -ms-transform: translateY(-50%);
                 transform: translateY(-50%);
                 right: 0;
-                max-width: 50%;
+                max-width: 45%;
                 padding-left: 45px;
                 padding-right: 3em; } }
         .owl-carousel.home-slider .slider-item .slider-text .subheading {
